# varvec

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  varvec.cpp  varvec.hpp
tests/: CMakeLists.txt  test.cc
