find_package(Catch2 3 REQUIRED)

option(benchmark "Whether to enable benchmarks" OFF)
option(coverage "Whether to enable coverage" OFF)

add_executable(tests test.cc)
set_property(TARGET tests PROPERTY CXX_STANDARD 20)
target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
if (${benchmark})
  target_compile_definitions(tests PRIVATE VARVEC_BENCHMARK)
else ()
  target_compile_options(tests PRIVATE -fsanitize=address,undefined)
  target_link_options(tests PRIVATE -fsanitize=address,undefined)
endif ()
if (${coverage})
  target_compile_options(tests PRIVATE -fprofile-arcs -ftest-coverage)
  target_link_libraries(tests PRIVATE gcov)
endif ()
add_test(NAME varvec_tests COMMAND tests)
